@@ -1,0 +1,16 @@
+#!/bin/sh
+
+set -e
+
+LIBDIR=@LIBDIR@
+
+if [ "$1" = "remove" ] || [ "$1" = "upgrade" ] && dpkg --compare-versions $2 lt "3.0.2~"; then
+	diversions="icons/document.png mozicon128.png mozicon16.xpm mozicon50.xpm"
+	diversions="$diversions chrome/icons/default/default16.png \
+		chrome/icons/default/default32.png \
+		chrome/icons/default/default48.png"
+
+	for i in $diversions; do
+		dpkg-divert --remove $LIBDIR/$i
+	done
+fi
